<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.presentable.diary.EditEntryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TableRow>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/activity_edit_entry_et_entry"
                    android:layout_weight="1"
                    android:hint="@string/activity_edit_entry_et_greeting"
                    android:gravity="top"
                    android:minLines="20"/>
        </TableRow>

        <TableRow android:gravity="center_vertical"
                  android:layout_marginTop="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/activity_edit_entry_weather"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/activity_edit_entry_spn_weather"/>
        </TableRow>

        <TableRow android:gravity="center_vertical"
                  android:layout_marginTop="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/activity_edit_entry_mood"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/activity_edit_entry_spn_mood"/>
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/activity_horizontal_margin">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:text="@string/activity_edit_entry_btn_save"
                android:id="@+id/activity_edit_entry_btn_save" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/activity_horizontal_margin">
            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:text="@string/activity_edit_entry_btn_delete"
                android:id="@+id/activity_edit_entry_btn_delete" />
        </TableRow>
    </TableLayout>
</ScrollView>
